theme/standardtotararesponsive/style/totara.css
/*
 * This file is part of Totara LMS
 *
 * Copyright (C) 2010 onwards Totara Learning Solutions LTD
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 * @author Simon Coggins <simon.coggins@totaralms.com>
 * @package totara
 * @subpackage totara_core
 *
 *
 * This stylesheet is for layout and *very* basic styling for *general* Totara-specific
 * elements. For styles that are specific to a particular module, use
 * totara/[modname]/style.css instead.
 *
 * Any styles in here should be suitable for displaying in the 'base' theme.
 * Additional styling (e.g. colours etc) should go in the Totara theme
 *
 * Make sure you comment each section to clearly indicate where it is used
 */

/* Class for full width content */
.fullwidth {
    width: 100%;
}

/* Override help link size */
.helplink img {
    height: 14px;
    width: 14px;
    /* offset image out of sight - only needed to preload hover state */
    background: url([[pix:moodle|help-hover]]) 100 100 no-repeat;
}

/**
 * Totara toolbar - used by lib/totaratablelib.php
 */
.totaratable .toolbar {
    background-color: #f3f3f3 !important;
    padding: 0px 0px;
}
.totaratable .toolbar-left-table,
.totaratable .toolbar-right-table {
    margin: 0px;
}
.totaratable .toolbar-cell {
    border: none;
    vertical-align: top;
    white-space: nowrap;
    padding: 4px;
    background-color: #f3f3f3;
    display: inline-block;
}
.totaratable .toolbar-cell .fitem_fsubmit,
.totaratable .toolbar-cell input {
    vertical-align: top;
    margin: 0;
}
.totaratable .toolbar-cell form div {
    margin: 0;
}

/* Align the toolbar items, swapping sides in RTL languages */
.totaratable .toolbar-left-table {
    float: left;
}
.totaratable .toolbar-right-table {
    float: right;
}
body.dir-rtl .totaratable .toolbar-left-table {
    float: right;
}
body.dir-rtl .totaratable .toolbar-right-table {
    float: left;
}

/* modify borders to make toolbars look like a single row */
.totaratable .toolbar-top td.toolbar,
.totaratable .toolbar-bottom td.toolbar {
    border-bottom: none;
    border-top: none;
}
.totaratable .toolbar-bottom.first td.toolbar {
    border-top: 1px solid #ddd;
}

/* Reduce the margin for paging bars inside the toolbar */
.totaratable .paging {
    margin: 0px;
}

/* Message displayed if there are no records to show */
.totaratable .norecords {
    padding: 20px;
    text-align: center;
}

/*******************************************************************************
 * Totara Dialog styles & jQuery UI skin overrides
 ******************************************************************************/
#ui-widget-overlay {
    /* actually the underlay */
    opacity: 0.5;
}
.totara-dialog h3 {
    font-weight: bold;
    font-size: 13px;
    padding: 2px;
    line-height: 20px;
}
#dialog-tabs {
    border: none;
}
.totara-dialog .selected {
    border-left: 1px solid #cccccc;
}
.totara-dialog .selected div {
    padding-left: 3px;
}
.totara-dialog .treeview .unclickable,
.totara-dialog .treeview .unclickable a {
    color: #777777;
}
.totara-dialog .selected .unremovable .deletebutton,
.totara-dialog .selected .unremovable .addbutton {
    background:none;
}
.totara-dialog .selected span span.addbutton,
.totara-dialog .selected span span.deletebutton {
    background: none repeat scroll 0 0 transparent;
    cursor: pointer;
    float: right;
    display: inline; /* IE margin-doubling fix */
    margin: 0;
    overflow: hidden;
    text-indent: -999px;
    width: 17px;
}
/* Handle hovers */
.totara-dialog .selected div:hover span.deletebutton {
    background-image: url([[pix:totara_core|jquery_ui_dialog/ui-icons_000000_256x240]]);
    background-position:-80px -128px;
    background-repeat: no-repeat;
}
.totara-dialog .selected div:hover span.addbutton {
    background-image: url([[pix:moodle|t/add]]);
    background-position: right center;
    background-repeat: no-repeat;
}
.totara-dialog .deletebutton,
.totara-dialog .addbutton {
    background:none;
    display: none;
}

/* Dialog buttons */
div.ui-dialog .ui-dialog-buttonpane button {
    cursor: pointer;
}

/* Misc Dialog parts */
div.ui-dialog .totara-msgs-action-left {
    width:15%;
    font-weight:bold;
    padding-right:10px;
    text-align:right;
    vertical-align:top;
}
div.ui-dialog .totara-msgs-action-right {
    vertical-align:top;
}

.totara-dialog #fitem_id_query {
    padding-top: 2px;
}
.totara-dialog #fitem_id_dialogsearchsubmitbutton {
    padding: 2px 3px;
}

/* Make none JS links look more like buttons */
a.noscript-button {
    padding: 5px;
    margin: 5px;
    border: 1px solid #999;
    background: #eee;
    display: block;
    width: 150px;
    float: left;
    text-align: center;
}

/* button for removing Positions once added by dialog */
.dialog-singleselect-deletable {
    vertical-align: middle;
    cursor: pointer;
    display: inline-block;
    margin: 0 0 0 2px;
    overflow: hidden;
    text-indent: 100%;
    white-space: nowrap;
    padding: 2px 0px;
    width: 20px;
    background: transparent url([[pix:moodle|t/delete]]) 2px 3px no-repeat;
}

/* fix for add competency display width */
#hierarchy-type-competency-evidence-add #mform1 {
    width: 95%;
}

/** Competencies lightbox styling **/
#evidence #available-evidence {
    width: 40%;
    border-left: 1px solid #ccc;
    overflow: auto;
    padding-left: 10px;
}
/* ... */

